heap memory tweaking